# dlt_data_pipeline

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  data_pipeline_plan.md  demo.md  pyproject.toml
.dlt/: config.toml  secrets.toml.example
.dlt/pipelines/basic_rest/basic_rest/: state.json
.dlt/pipelines/delta_with_resources/delta_with_resources/: state.json
.dlt/pipelines/disabled_rest/disabled_rest/: state.json
.dlt/pipelines/example_rest_to_duckdb/example_rest_to_duckdb/: state.json
.github/actions/setup-uv-airflow/: action.yml
.github/workflows/: ci.yml
airflow_home/: airflow.cfg
dags/: data_pipeline_dags.py  heartbeat_check.py
deploy/k8s/base/: README.md  airflow-configmap.yaml  airflow-pod-template-configmap.yaml  airflow-secret.yaml  pod-template-base.yaml  postgres-metadata-statefulset.yaml  rbac.yaml  scheduler-deployment.yaml  triggerer-deployment.yaml  webserver-deployment.yaml
deploy/k8s/overlays/dev/: README.md
deploy/k8s/overlays/prod/: README.md
deploy/k8s/overlays/staging/: README.md
docker/: Dockerfile  README.md  docker-compose.yml
docker/postgres-source-init/: 01_replication.sql
docs/: features.md
pipelines/: README.md  _schema.json  _schema.md  example_filesystem_to_duckdb.yml  example_pg_cdc_to_pg.yml  example_pg_cdc_to_snowflake.yml  example_pg_to_pg_incremental.yml  example_pg_to_pg_quality.yml  example_rest_to_duckdb.yml
pipelines/_env/: dev.yml  prod.yml
scripts/: new_pipeline.py  seed_local.sh  seed_source.sql
src/data_pipeline_template/: __main__.py  mcp_server.py  pipeline_factory.py
src/data_pipeline_template/airflow/: callbacks.py  dag_factory.py  sensors.py
src/data_pipeline_template/cli/: config_cmds.py  pipelines_cmds.py  sources_cmds.py
src/data_pipeline_template/config/: loader.py  models.py
src/data_pipeline_template/destinations/: _metadata.py  factory.py  registry.py
src/data_pipeline_template/observability/: alerts.py
src/data_pipeline_template/sources/: _metadata.py  _protocol.py  registry.py
src/data_pipeline_template/sources/filesystem/: __init__.py  _metadata.py
src/data_pipeline_template/sources/pg_cdc/: __init__.py  _metadata.py
src/data_pipeline_template/sources/pg_cdc/_vendor/: NOTICE.md  __init__.py
src/data_pipeline_template/sources/rest_api/: __init__.py  _metadata.py
src/data_pipeline_template/sources/sql_database/: __init__.py  _metadata.py
src/dlt_data_pipeline/: __main__.py  mcp_server.py  pipeline_factory.py
src/dlt_data_pipeline/airflow/: README.md  callbacks.py  dag_factory.py  quality.py  sensors.py
src/dlt_data_pipeline/cli/: README.md  backfill_cmds.py  config_cmds.py  delete_cmds.py  pipelines_cmds.py  sources_cmds.py
src/dlt_data_pipeline/config/: README.md  __init__.py  loader.py  models.py
src/dlt_data_pipeline/destinations/: README.md  _metadata.py  factory.py  registry.py
src/dlt_data_pipeline/observability/: README.md  alerts.py  log_filter.py
src/dlt_data_pipeline/sources/: README.md  _metadata.py  _protocol.py  registry.py
src/dlt_data_pipeline/sources/filesystem/: __init__.py  _metadata.py
src/dlt_data_pipeline/sources/pg_cdc/: __init__.py  _metadata.py
src/dlt_data_pipeline/sources/rest_api/: __init__.py  _metadata.py
src/dlt_data_pipeline/sources/sql_database/: __init__.py  _metadata.py
tests/: README.md  conftest.py
tests/fixtures/files/: orders.csv  orders.jsonl  orders.parquet
tests/fixtures/pipelines_dag_factory/: basic_rest.yml  delta_with_resources.yml  disabled_rest.yml  pg_cdc_to_pg.yml  sql_db_incremental.yml
tests/fixtures/pipelines_dup_a/: one.yml  two.yml
tests/fixtures/pipelines_invalid/: bad_yaml.yml  missing_cursor.yml
tests/fixtures/pipelines_valid/: _ignored.yml  alpha.yml  beta.yml  gamma.yml
tests/fixtures/rest_cassettes/: pokemon.json
tests/integration/: test_alerting_e2e.py  test_destinations_snowflake.py  test_dry_run.py  test_filesystem_source.py  test_pg_cdc.py  test_pipelines_delete_pg_cdc.py  test_pod_override.py  test_rest_to_duckdb.py  test_schema_change_alert.py  test_segment12_hermetic.py  test_sql_database_incremental.py
tests/unit/: test_alerts.py  test_callbacks.py  test_cli_backfill.py  test_cli_config.py  test_cli_delete.py  test_cli_pipelines.py  test_cli_promote.py  test_cli_sources.py  test_config_loader.py  test_config_models.py  test_config_models_segment12.py  test_config_overlay.py  test_dag_factory.py  test_dag_factory_row_count.py  test_dagbag.py  test_destinations_factory.py  test_destinations_factory_config.py  test_entry_points.py  test_heartbeat_dag.py  test_log_filter.py  test_mcp_server.py  test_new_pipeline_scaffolder.py  test_pg_cdc_builder.py  test_pipeline_factory_no_airflow.py  test_registry.py  test_skeleton.py  test_sources_metadata.py  test_sql_database_builder.py
