[project]
name = "dlt-data-pipeline"
version = "0.1.0"
description = "Reusable dlt + Airflow Fivetran replacement"
requires-python = ">=3.12,<3.13"
# Airflow refuses unpinned dependency resolution. Install with the matching
# constraints file, e.g.:
#   uv pip install "apache-airflow==2.10.*" \
#     --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.10.3/constraints-3.12.txt"
# uv sync will not honor Airflow's constraints automatically — see README.
dependencies = [
  "dlt[duckdb,postgres,filesystem,sql_database]>=1.0",
  "apache-airflow>=2.10,<3",
  "apache-airflow-providers-cncf-kubernetes>=8",
  "apache-airflow-providers-postgres>=5",
  # S3 remote logging for KubernetesExecutor worker pods (Segment 10): pod
  # local disk is ephemeral; Airflow ships task logs to s3 via the
  # AmazonRemoteLogIO handler exposed by this provider.
  "apache-airflow-providers-amazon>=8",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "fastmcp>=2",
  # Filesystem source readers (Segment 8): dlt's read_csv uses pandas,
  # read_parquet uses pyarrow. dlt[filesystem] only pulls fsspec — add
  # the format-specific deps explicitly so the source works out of the box.
  "pandas>=2.0",
  "pyarrow>=15",
]

[project.optional-dependencies]
# Heavy / platform-sensitive destinations gated as extras — install only when
# wiring Segment 8. snowflake-connector-python has no macOS arm64 wheel and
# requires Xcode CLT to build from sdist.
snowflake = ["dlt[snowflake]>=1.0"]
databricks = ["dlt[databricks]>=1.0"]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
  "types-PyYAML>=6",
  "responses>=0.25",
]

[project.entry-points."dlt_data_pipeline.sources"]
rest_api = "dlt_data_pipeline.sources.rest_api:builder"
sql_database = "dlt_data_pipeline.sources.sql_database:builder"
filesystem = "dlt_data_pipeline.sources.filesystem:builder"
pg_cdc = "dlt_data_pipeline.sources.pg_cdc:builder"

[project.entry-points."dlt_data_pipeline.sources.metadata"]
rest_api = "dlt_data_pipeline.sources.rest_api._metadata:metadata"
sql_database = "dlt_data_pipeline.sources.sql_database._metadata:metadata"
filesystem = "dlt_data_pipeline.sources.filesystem._metadata:metadata"
pg_cdc = "dlt_data_pipeline.sources.pg_cdc._metadata:metadata"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlt_data_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Vendored upstream sources (e.g. dlt pg_replication) are kept verbatim under
# */_vendor/ so upgrades are a re-copy; lint them at upstream's standards, not
# ours.
extend-exclude = ["src/dlt_data_pipeline/sources/*/_vendor/"]

[tool.ruff.lint]
select = ["E", "F", "I", "TID", "UP", "B"]

[tool.ruff.lint.flake8-tidy-imports]
# Enforce Design principle #2: only the airflow subpackage + dags/ entry-point
# may import airflow. Keeps pipeline_factory + sources/ + destinations/ +
# config/ orchestrator-agnostic.
banned-module-level-imports = ["airflow"]

[tool.ruff.lint.per-file-ignores]
"src/dlt_data_pipeline/airflow/**" = ["TID253"]
"dags/**" = ["TID253"]
"tests/**" = ["TID253"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["dlt_data_pipeline"]
# Vendored upstream sources are kept verbatim and lint at upstream's standards,
# not ours (mirrors the ruff extend-exclude rule above).
exclude = ["src/dlt_data_pipeline/sources/.*/_vendor/"]

[[tool.mypy.overrides]]
# kubernetes Python client lacks py.typed marker / stubs; lazily imported in
# dag_factory._pod_override only when KubernetesExecutor is in use.
module = ["kubernetes.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "postgres: requires a live Postgres (GHA `services:` postgres or compose)",
  "cdc: requires wal_level=logical (docker compose only — GHA services cannot set it)",
  "snowflake: requires Snowflake credentials in env",
]
